opam-version: "2.0"
name: "iris-tini"
synopsis: "Logical relations for Termination-Insensitive Noninterference"
maintainer: "Simon Gregersen <gregersen@cs.au.dk>"
authors: "Simon Gregersen <gregersen@cs.au.dk>, Johan Bay <bay@cs.au.dk>"
homepage: "https://github.com/logsem/iris-tini"
dev-repo: "git+https://github.com/logsem/iris-tini.git"
build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { (= "8.12.0") | (= "dev") }
  "coq-iris" { (= "dev.2020-10-04.0.a36f8a23") | (= "dev") }
  "coq-stdpp" { (= "dev.2020-10-02.0.7ae77142") | (= "dev") }  
  "coq-iris-string-ident" { (= "dev") | (= "dev") }
  "coq-autosubst" { (= "dev.coq86") | (= "dev") }
]
