opam-version: "2.0"
name: "iris-tini"
synopsis: "Logical relations for Termination-Insensitive Noninterference"
maintainer: "Simon Gregersen <gregersen@cs.au.dk>"
authors: "Simon Gregersen <gregersen@cs.au.dk>, Johan Bay <bay@cs.au.dk>, Amin Timany <timany@cs.au.dk>"
license: "BSD-3"
homepage: "https://github.com/logsem/iris-tini"
dev-repo: "git+https://github.com/logsem/iris-tini.git"
bug-reports: "https://github.com/logsem/iris-tini/issues"
build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" { (>= "8.13" & < "8.14~") | (= "dev") }
  "coq-iris" { (= "3.4.0") | (= "dev") }
  "coq-stdpp" { (= "1.5.0") | (= "dev") }
  "coq-iris-string-ident" { (= "dev")  }
  "coq-autosubst" { (= "dev") }
]
